--- a/tests/Kafka.EventLoop.WorkerService/Kafka.EventLoop.WorkerService.csproj
+++ b/tests/Kafka.EventLoop.WorkerService/Kafka.EventLoop.WorkerService.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
