Added autofac container support

--- a/src/Kafka.EventLoop/Kafka.EventLoop.csproj
+++ b/src/Kafka.EventLoop/Kafka.EventLoop.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>Kafka.EventLoop.Autofac</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
