--- a/tests/Kafka.EventLoop.WorkerService/Kafka.EventLoop.WorkerService.csproj
+++ b/tests/Kafka.EventLoop.WorkerService/Kafka.EventLoop.WorkerService.csproj
@@ -7,12 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="7.0.1" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="AutoFixture" Version="4.18.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Kafka.EventLoop.Autofac\Kafka.EventLoop.Autofac.csproj" />
     <ProjectReference Include="..\..\src\Kafka.EventLoop\Kafka.EventLoop.csproj" />
   </ItemGroup>
 </Project>
