Transient errors - seeking consumer back instead of disconnecting and restarting

--- a/examples/Kafka.EventLoop.WorkerService/appsettings.json
+++ b/examples/Kafka.EventLoop.WorkerService/appsettings.json
@@ -35,7 +35,7 @@
             "StopConsumer": true
           },
           "Transient": {
-            "RestartConsumerAfterMs": 5000
+            "PauseAfterTransientErrorMs": 5000
           }
         }
       },
@@ -58,7 +58,7 @@
             }
           },
           "Transient": {
-            "RestartConsumerAfterMs": 5000
+            "PauseAfterTransientErrorMs": 5000
           }
         }
       },
@@ -78,7 +78,7 @@
             "StopConsumer": true
           },
           "Transient": {
-            "RestartConsumerAfterMs": 5000
+            "PauseAfterTransientErrorMs": 5000
           }
         }
       },
@@ -98,7 +98,7 @@
             "StopConsumer": true
           },
           "Transient": {
-            "RestartConsumerAfterMs": 5000
+            "PauseAfterTransientErrorMs": 5000
           }
         }
       }
